bad/invalid_cast_type_nonexistent_class.example_compiler_output
ERROR
[1mbad/invalid_cast_type_nonexistent_class.lat:3:6: [1;31merror: [0;1mUnknown class: list[m
    (list)null == null;
     [1;32m^[m
